# dither-sim

./: .dither-history  .gitmodules  Cargo.toml  README.md  build.rs  flake.nix  rustfmt.toml
.cargo/: config  config.toml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs  main.rs  remote.rs
dither/: Cargo.toml
dither/node/: Cargo.toml
dither/node/src/: lib.rs  net.rs  packet.rs  ping.rs  remote.rs  session.rs  types.rs
dither/src/: bin.rs  commands.rs  encryption.rs  lib.rs
gui/: Cargo.toml
gui/src/: graph.rs  gui.rs  main.rs
node/: Cargo.toml
node/src/: lib.rs  net.rs  packet.rs  remote.rs  rkyv_codec.rs  session.rs  types.rs
sim/: Cargo.toml
sim/cli/: Cargo.toml
sim/cli/src/: cli.rs  main.rs
sim/device/: Cargo.toml
sim/device/src/: lib.rs  main.rs  types.rs
sim/gui/: Cargo.toml  main.rs
sim/gui/src/: graph_widget.rs  gui.rs  main.rs  network_map.rs  subscription.rs
sim/gui/src/gui/: loaded.rs  loading.rs
sim/gui/src/tabs/: dither_tab.rs  mod.rs  network_tab.rs
sim/gui/src/tabs/tabs/: network_tab.rs
sim/src/: internet.rs  lib.rs  main.rs  net_old.rs  node.rs  plot.rs
sim/src/internet/: internet_node.rs  mod.rs  netsim_ext.rs  router.rs
src/: cli.rs  graph.rs  gui.rs  lib.rs  main.rs  node.rs  plot.rs  ui.rs
src/gui/: network_map.rs
src/gui/tabs/: mod.rs
src/internet/: mod.rs
src/tabs/: mod.rs  network_tab.rs  theme.rs  virtual_tab.rs
