[workspace]
members = [
	"dither", # Cross-Platform Network Implementation of Dither API

	"sim",
	# "sim/cli",
	"sim/gui", # Gui simulation
	"sim/device", # Dither Client controlled by stdin and stdout by sim/gui
]

[patch.crates-io]
netsim-embed = { path = "vendor/netsim-embed" }
iced = { path = "vendor/iced" }
iced_futures = { path = "vendor/iced/futures" }
iced_core = { path = "vendor/iced/core" }
iced_graphics = { path = "vendor/iced/graphics" }
iced_native = { path = "vendor/iced/native" }

[workspace.metadata.nix]
nativeBuildInputs = [
	"cargo-edit",
	"lldb",
	"pkg-config",
	"cmake",
]
buildInputs = [
	"libxkbcommon",
	"x11",
	"xorg.libX11",
	"xorg.libXcursor",
	"xorg.libXrandr",
	"xorg.libXi",
	"vulkan-tools",
	"vulkan-headers",
	"vulkan-loader",
	"vulkan-validation-layers",
	"fontconfig",
	"freetype",
	"protobuf",
]
runtimeLibs = [
	"x11",
	"xorg.libX11"
]
toolchain = "nightly"
devshell = {name = "dither-sim-shell" }