[workspace]
resolver = "2"
members = [
	# "dither", # Cross-Platform Network Implementation of Dither API

	"sim",
	# "sim/cli",
	"sim/gui", # Gui simulation
	"sim/device", # Dither Client controlled by stdin and stdout by sim/gui
]
exclude = [ "dither" ]

[patch.crates-io]
nalgebra = { path = "vendor/nalgebra" }
netsim-embed = { path = "vendor/netsim-embed" }
num-complex = { git = "https://github.com/zyansheep/num-complex" }
# iced = { path = "vendor/iced" }
# iced_futures = { path = "vendor/iced/futures" }
# iced_core = { path = "vendor/iced/core" }
# iced_graphics = { path = "vendor/iced/graphics" }


[workspace.metadata.nix]
cCompiler = "gcc12"
nativeBuildInputs = [
	"cargo-edit",
	"pkg-config",
	"cmake",
	"mold",
]
buildInputs = [
	"libxkbcommon",
	"xorg.libX11",
	"xorg.libXcursor",
	"xorg.libXrandr",
	"xorg.libXi",
	"vulkan-tools",
	"vulkan-headers",
	"vulkan-loader",
	"vulkan-validation-layers",
	"fontconfig",
	"freetype",
	"protobuf",
]
runtimeLibs = [
	"xorg.libX11"
]
toolchain = "nightly"
devshell = {name = "dither-sim-shell" }