[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sim = { path = "../sim", features = ["plot"] }
anyhow = "1.0.42"
env_logger = "0.8.4"
rand = "0.8.4"
fancy-regex = "0.6.0"
csv = "1.1.6"
permutation_iterator = "0.1.2"
serde = { version = "1.0.126", features = ["derive"] }
