[package]
name = "dither-core"
version = "0.1.0"
authors = ["zyansheep <zyansheep@github.com>"]
edition = "2018"
description = "Wraps Node API with platform-specific features"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
env_logger = "0.9.0"
futures = "0.3.17"
libp2p = { version = "0.39.1", features = [ "tcp-tokio" ] }
log = "0.4.14"
node = { path = "../node" }
tokio = { version = "1.12.0", features = ["full"] }
