[package]
name = "libdither"
version = "0.1.0"
authors = ["zyansheep <zyansheep@github.com>"]
edition = "2018"
description = "Wraps Node API with platform-specific features"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
env_logger = "0.9.0"
futures = "0.3.21"
# libp2p = { version = "0.43.0", default-features = false, features = [ "mplex", "noise" ] }
log = "0.4.14"
# tokio = { version = "1.17.0", features = ["full"] }

node = { path = "node" }
serde = { version = "1.0.136", features = ["derive"] }
rustyline = "9.1.2"
async-std = "1.10.0"

[lib]
name = "libdither"
path = "src/lib.rs"

[[bin]]
name = "dither"
path = "src/bin.rs"
