[package]
name = "libdither"
version = "0.1.0"
authors = ["zyansheep <zyansheep@github.com>"]
edition = "2018"
description = "Wraps Node API with platform-specific features"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
futures = "0.3.21"
log = "0.4.16"

node = { path = "node" }
serde = { version = "1.0.136", features = ["derive"] }
async-std = { version = "1.11.0", features = [ "attributes" ] }
rkyv = { version = "0.7.37", features = ["validation"] }
thiserror = "1.0.30"
rustyline-async = { git = "https://github.com/zyansheep/rustyline-async" }
simplelog = "0.11.2"

[lib]
name = "libdither"
path = "src/lib.rs"

[[bin]]
name = "dither"
path = "src/bin.rs"

[features]
