[package]
name = "node"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"

nalgebra = { version = "0.27.1", features = ["serde-serialize"] }
petgraph = { version = "0.6.0", features = ["graphmap", "serde-1"] }
slotmap = { version = "1.0.5", features = ["serde"] }
smallvec = { version = "1.6.1", features = ["serde"] }
bimap = { version = "0.6.1", features = ["serde"] }
vpsearch = "2.0.1"

[lib]
name = "node"
path = "src/lib.rs"
