[package]
name = "node"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"

nalgebra = { version = "0.29.0", features = ["serde-serialize"] }
petgraph = { version = "0.6.0", features = ["graphmap", "serde-1"] }
slotmap = { version = "1.0.5", features = ["serde"] }
smallvec = { version = "1.6.1", features = ["serde"] }
bimap = { version = "0.6.1", features = ["serde"] }
vpsearch = "2.0.1"
log = "0.4.14"
thiserror = "1.0.26"
futures = "0.3.16"
derivative = "2.2.0"
anyhow = "1.0.43"
rkyv = "0.7.13" # Zero-Copy Serialization
serde = "1.0.130"

[lib]
name = "node"
path = "src/lib.rs"
