[package]
name = "sim"
version = "0.1.0"
authors = ["Zyansheep <zyansheep@protonmail.com>"]
edition = "2018"
description = "Simulation Program for Dither"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# plot = ["plotters"]

[dependencies]
node = { path = "../dither/node" }
device = { path = "device" }

async-process = "1.2.0"
async-std = "1.10.0"
futures = "0.3.17"

anyhow = "1.0.44"
log = "0.4.14"
# plotters = { git = "https://github.com/zyansheep/plotters", optional = true }

rand = { version = "0.8.4", features = ["small_rng"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
bincode = "1.3.3"

thiserror = "1.0.30"
netsim-embed = "0.5.2"
derivative = "2.2.0"
nalgebra = "0.29.0"
netsim-embed-machine = "0.4.3"
futures-delay-queue = "0.5.0"
async-global-executor = "2.0.2"
petgraph = "0.6.0"
futures-intrusive = "0.4.0"
slotmap = { version = "1.0", features = ["serde"] }


