[package]
name = "sim"
version = "0.1.0"
authors = ["Zyansheep <zyansheep@protonmail.com>"]
edition = "2018"
description = "Simulation Program for Dither"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# plot = ["plotters"]

[dependencies]
node = { path = "../dither/node" }
device = { path = "device" }

async-process = "1.3.0"
async-std = "1.10.0"
futures = "0.3.21"

anyhow = "1.0.55"
log = "0.4.14"
# plotters = { git = "https://github.com/zyansheep/plotters", optional = true }

rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bincode = "1.3.3"

thiserror = "1.0.30"
netsim-embed = "0.7.1"
derivative = "2.2.0"
nalgebra = { version = "0.30.1", features = [ "serde-serialize" ] }
netsim-embed-machine = "0.6.2"
futures-delay-queue = "0.5.1"
async-global-executor = "2.0.2"
petgraph = "0.6.0"
futures-intrusive = "0.4.0"
slotmap = { version = "1.0.6", features = ["serde"] }


