[package]
name = "sim"
version = "0.1.0"
authors = ["Zyansheep <zyansheep@protonmail.com>"]
edition = "2021"
description = "Simulation Program for Dither"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# plot = ["plotters"]

[dependencies]
node = { path = "../dither/node" }
device = { path = "device" }

async-process = "1.4.0"
async-std = "1.12.0"
futures = "0.3.21"

anyhow = "1.0.58"
log = "0.4.17"
# plotters = { git = "https://github.com/zyansheep/plotters", optional = true }

rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
bincode = "1.3.3"

thiserror = "1.0.31"
netsim-embed = "0.7.1"
derivative = "2.2.0"
nalgebra = { version = "0.31.0", features = [ "serde-serialize" ] }
netsim-embed-machine = "0.6.2"
futures-delay-queue = "0.5.2"
async-global-executor = "2.2.0"
petgraph = "0.6.2"
futures-intrusive = "0.4.0"
slotmap = { version = "1.0.6", features = ["serde"] }


