[package]
name = "device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-std = "1.12.0"
env_logger = "0.9.0"
futures = "0.3.21"
libdither = { path = "../../dither" }
log = "0.4.17"
ron = "0.7.1"
serde = { version = "1.0.139", features = ["derive"] }

[features]
