[package]
name = "gui"
version = "0.1.0"
authors = ["zyansheep <zyansheep@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sim = { path = ".." }

async-std = "1.10.0"
iced = { version = "0.3.0", features = ["canvas" ] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", features = ["tabs"] }
iced_futures = "0.3.0"

anyhow = "1.0.44"
env_logger = "0.9.0"
derivative = "2.2.0"

rand = "0.8.4"
nalgebra = "0.29.0"
slotmap = "1.0.6"
futures = "0.3.17"
serde = "1.0.130"
log = "0.4.14"
petgraph = "0.6.0"
